<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgimage"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/gameBtn"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:text="@string/new_game"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.869"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.721" />

    <Button
        android:id="@+id/abtBtn"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:background="#072DFF"
        android:text="@string/about"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.137"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.726" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="94dp"
        android:layout_height="109dp"
        android:contentDescription="@string/icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.265"
        app:srcCompat="@drawable/icon1" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="83dp"
        android:layout_height="107dp"
        android:contentDescription="@string/icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.951"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.264"
        app:srcCompat="@drawable/icon2" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="95dp"
        android:layout_height="89dp"
        android:contentDescription="@string/icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.104"
        app:srcCompat="@drawable/icon5" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="365dp"
        android:layout_height="437dp"
        android:contentDescription="@string/icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.755"
        app:srcCompat="@drawable/idea" />

</androidx.constraintlayout.widget.ConstraintLayout>